--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ html {
 
 body {
     font: 28px/44px 'Noto Sans', "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
-    font-weight: 100;
+    font-family: 'Noto Sans', sans-serif;
+	font-weight: 100;
     margin: 0;
 }
 
