--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(http://fonts.googleapis.com/css?family=Noto+Sans:100,300,500,700);
 html {
     height: 100%;
     min-height: 100%;
