--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -255,3 +255,42 @@ footer {
     color:#444;
   }
 }
+
+@media only screen and (max-device-width: 480px) {
+  html {
+    height: 100%;
+    min-height: 100%;
+}
+
+body {
+    font: 28px/44px 'Noto Sans', "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
+    font-family: 'Noto Sans', sans-serif;
+	font-weight: 100;
+    margin: 0;
+}
+
+a {
+    font-weight: 400;
+}
+
+a:link, a:visited {
+    font-weight: 400;
+	text-decoration: none;
+    text-transform: none;
+    color: #0554db;
+    -webkit-transition:color 200ms ease-in-out;
+    -moz-transition:color 200ms ease-in-out;
+    -o-transition:color 200ms ease-in-out;
+    transition:color 200ms ease-in-out;
+}
+
+a:hover {
+    color: #8180ff;
+    
+}
+
+#page {
+    margin: 33px 50px;
+    float: left;
+}
+	}
