--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -261,7 +261,9 @@ footer {
     height: 100%;
     min-height: 100%;
 }
-
+header {
+	visibility:hidden;
+}
 body {
     font: 28px/44px 'Noto Sans', "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
     font-family: 'Noto Sans', sans-serif;
