--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,9 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.title | strip_html }}" href="{{ "/feed.xml" | prepend: site.baseurl }}" />
 
+    <!-- Redirect to gstarr.me/project -->
+    <META http-equiv="refresh" content="0;URL=http://gstarr.me/projects">
+    
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/pixyll.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
 
