--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.title | strip_html }}" href="{{ "/feed.xml" | prepend: site.baseurl }}" />
 
     <!-- Redirect to gstarr.me/project -->
-    <META http-equiv="refresh" content="0;URL=http://gstarr.me/projects/{{ page.url }}">
+    <META http-equiv="refresh" content="0;URL=http://gstarr.me/projects{{ page.url }}">
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/pixyll.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
